<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_scrollview_land"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/main_layout_land"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="16dp">

        <Button
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"
            android:onClick="showMenu"
            android:text="@string/menu" />

        <Button
            android:id="@+id/reglog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/menu_button"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:onClick="showMenu_reglog"
            android:text="@string/reg_log" />

        <TextView
            android:id="@+id/information_text"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/menu_button"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/greeting"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/box_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginTop="120dp"
                android:src="@drawable/russel_westbrook" />


            <TextView
                android:id="@+id/greeting_text"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/image_view"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/information"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <!-- Three buttons in a row -->
            <LinearLayout
                android:id="@+id/buttons_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/news_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="NavigateToNewsActivity"
                    android:text="@string/news"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/players_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="NavigateToPlayersActivity"
                    android:text="@string/players"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/scores_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="NavigateToScoreActivity"
                    android:text="@string/scores"
                    android:textSize="14sp" />

            </LinearLayout>

            <!-- Two buttons below -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttons_row"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/teams_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="NavigateToTeamsActivity"
                    android:text="@string/teams"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/schedule_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="NavigateToScheduleActivity"
                    android:text="@string/schedule"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>
</ScrollView>