<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/news_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:padding="16dp">

    <Button
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:onClick="showMenu"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/reglog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_log"
        android:onClick="showMenu_reglog"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/menu_button"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/news_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_greet"

        />
</RelativeLayout>
